# llama_index

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml
llama-index-core/: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
llama-index-core/storage/: docstore.json  index_store.json  object_node_mapping.pickle
llama-index-core/tests/: test_schema.py
llama-index-experimental/: pyproject.toml
llama-index-finetuning/: pyproject.toml
llama-index-integrations/: test.sh
llama-index-integrations/llms/llama-index-llms-anthropic/: pyproject.toml
llama-index-legacy/: pyproject.toml
llama-index-legacy/docs/: DOCS_README.md
llama-index-legacy/storage/: docstore.json  index_store.json  object_node_mapping.pickle
llama-index-legacy/tests/: test_schema.py
llama-index-packs/llama-index-packs-amazon-product-extraction/: README.md
llama-index-packs/llama-index-packs-arize-phoenix-query-engine/: README.md
llama-index-packs/llama-index-packs-auto-merging-retriever/: README.md
llama_index/: VERSION  _rust.pyi
llama_index/agent/: __init__.py
llama_index/callbacks/: global_handlers.py
llama_index/embeddings/: __init__.py
llama_index/extractors/: marvin_metadata_extractor.py
llama_index/llms/: __init__.py  bedrock_utils.py  gemini.py  monsterapi.py  ollama.py  perplexity.py  vertex.py
llama_index/output_parsers/: __init__.py
llama_index/query_engine/: __init__.py
llama_index/query_pipeline/: __init__.py
llama_index/readers/: __init__.py  pinecone.py
llama_index/selectors/: __init__.py
src/: lib.rs
(+1161 files in other folders)
