[tool.poetry]
name = "llama-index-experimental"
version = "0.0.1"
description = "Collection of experimental abstractions and classes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
