[tool.poetry]
name = "llama-index-llms-anthropic"
version = "0.0.1"
description = "LLM integration for Anthropic"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
